@@ -1,4 +1,4 @@
-cloudify-utilities-plugins-sdk>=0.0.61
+cloudify-utilities-plugins-sdk>=0.0.66
 urllib3==1.24.3
 networkx==1.9.1
 cryptography>=3.3.2
